--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             135 ml Wasser (heißes)
             etwas Öl (neutrales, zum Bedecken des Teiges)
         
-        Für die Soße
+        Für die Sauce
         
             4 Knoblauchzehen
             1 Frühlingszwiebel
