--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>that</title>
+    <title>that fine </title>
   </head>
 
   <body>
